tests/build/cases/widget_new/incorrect_arg_type5.stderr
error[E0277]: the trait bound `bool: IntoVar<u32>` is not satisfied
  --> cases/widget_new/incorrect_arg_type5.rs:11:21
   |
11 |         simple_type = 42, true
   |         ----------- ^ the trait `IntoVar<u32>` is not implemented for `bool`
   |         |
   |         required by a bound introduced by this call
   |
   = help: the following other types implement trait `IntoVar<T>`:
            <implementers-list>
note: required by a bound in `simple_type::__new__`
  --> cases/widget_new/incorrect_arg_type5.rs:5:84
   |
4  | #[property(context)]
   | -------------------- required by a bound in this
5  | pub fn simple_type(child: impl UiNode, simple_a: impl IntoVar<u32>, simple_b: impl IntoVar<u32>) -> impl UiNode {
   |                                                                                    ^^^^^^^^^^^^ required by this bound in `simple_type::__new__`
